# ProjectTemplateEmbeddedC

./: CMakeLists.txt  README.md  appveyor.yml
ci/: appveyor_ci_build.ps1
production/: CMakeLists.txt
production/include/: ExamplePeripheral.h
production/sources/: ExampleModule.c  ExampleModule.h  main.c  main.h
test/: CMakeLists.txt  CommonTestTargets.cmake  GenerateTest.cmake
test/ExampleModule/: CMakeLists.txt  ExampleModule_test.cpp
test/Mocks/: CppUMockGen.hpp  ExampleModule_expect.cpp  ExampleModule_expect.hpp  ExampleModule_mock.cpp  ExamplePeripheral_expect.cpp  ExamplePeripheral_expect.hpp  ExamplePeripheral_mock.cpp
test/TestTemplate/: CMakeLists.txt  TestModule_test.cpp
test/main/: CMakeLists.txt  main_test.cpp
